--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,29 @@
 ---
-import LayoutDefault from "~/layouts/LayoutDefault.astro"
+import LayoutDefault from "~/layouts/LayoutDefault.astro";
 ---
 
 <LayoutDefault>
-  
+    <article class="heti">
+        <header>
+            <h1 class="post-title!">Tiankai Xie</h1>
+            <div class="text-3.5 mt-2">XAI | HCI | Visual Analytics</div>
+        </header>
+        <p>
+            Tiankai Xie is currently a dedicated Postdoctoral Research Scholar
+            at Arizona State University. His intellectual pursuits revolve
+            around the captivating convergence of Interpretable Machine
+            Learning, Human-Computer Interaction, and Visual Analytics. His
+            mission is to unravel the intricate layers of technology, ensuring
+            its accessibility through transparent AI algorithms. Simultaneously,
+            he is committed to crafting seamless interfaces that enrich
+            Human-Computer Interaction, creating intuitive connections between
+            users and digital systems. Moreover, his expertise extends to the
+            realm of Visual Analytics, where he meticulously deciphers intricate
+            data patterns to facilitate insightful decision-making. With an
+            unwavering commitment to pioneering research and engineering
+            innovation, he ardently envisions a future where technology fosters
+            unity rather than division, shaping a landscape where innovation
+            harmonizes with human understanding.
+        </p>
+    </article>
 </LayoutDefault>
